wacc_test/sample_programs/valid/structs/assigningStructInAStruct.wacc
# when a struct contains another struct then to assign it you must create a new struct

# Output:

# Output:

# Program:

begin
  struct A begin
    struct B anotherStruct ;
  end
  struct B begin
    int someData ;
  end
  struct A myStruct ;
  struct B subStruct ;
  myStruct.anotherStruct = subStruct ;
  myStruct.anotherStruct.someData = 5 ;
  println myStruct.anotherStruct.someData
end